--- a/themes/Academia-hugo/layouts/partials/functions/get_pub_types.html
+++ b/themes/Academia-hugo/layouts/partials/functions/get_pub_types.html
@@ -3,4 +3,4 @@
 {{ range site.Data.publication_types.types }}
   {{ $pub_types = $pub_types | append (i18n . | default "Uncategorized") }}
 {{ end }}
-{{ return $pub_types }}
+{{ $pub_types }}
